feat(fb3): CSS-атрибуты секций (class/xml:lang/style) через metadata
Fb3BodyParser снимает атрибуты <section> (кроме id) в Section.metadata,
Fb3Writer пишет их обратно — задел metadata теперь round-trip'ится в FB3.
HtmlRenderer выносит class секции в HTML через новый неломающий хук
FictionBookRenderer.startSection(id, attributes): реализация по умолчанию
делегирует в startSection(id), поэтому остальные рендереры не меняются;
BookPlayer вызывает 2-арг версию.

Тесты: Fb3WriterTest.Css (3) + RenderersTest (1), всего 314 → 318.
Обновлены STATUS.md, Архитектура проекта.md, Примеры использования.md, тесты.md.